# dockerytdeploy

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  Justfile  README.md  README_BKP.md  SERVER_CONFIG.md  compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml
nginx/: nginx.conf
nginx/templates/: app.conf.template  app.http-only.conf.template
scripts/: .tmux.conf  .vimrc  bootstrap.sh  certbot_renewal.sh  deploy.sh  gunicorn-entrypoint.sh  nginx_renewal.sh  remove_all.sh  setup_user.sh  utils.sh  variables.sh
src/dockerlabs/: cli.py  main.py
