[project]
name = "dockerlabs"
version = "0.0.1"
description = "This is a base docker dev env in Python."
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"
authors = [{ name = "Luiz Otávio Miranda" }]

dependencies = [
  "fastapi>=0.124.4",
  "gunicorn>=23.0.0",
  "uvicorn>=0.38.0",
  "uvloop>=0.22.1",
]

[dependency-groups]
dev = []

[project.urls]
Homepage = "https://www.otaviomiranda.com.br/"
Documentation = "https://github.com/luizomf/dockerlabs"
Repository = "https://github.com/luizomf/dockerlabs"
Issues = "https://github.com/luizomf/dockerlabs/issues"

[project.scripts]
dockerlabs = "dockerlabs.cli:main"

[tool.ruff]
line-length = 88
target-version = "py314"
fix = true
show-fixes = true
indent-width = 2
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T201", "INP001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["dockerlabs"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["src", "tests"]
exclude = [
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['./src/dockerlabs']
